[ASTERIXDB-2172] collect GC logs to assist in diagnosis
Change-Id: I6841da6ffb756843ba4265c64aa42faff3acfc09
Reviewed-on: https://asterix-gerrit.ics.uci.edu/2297
Reviewed-by: Till Westmann <tillw@apache.org>
Tested-by: Michael Blow <mblow@apache.org>